move all dependencies to devDependencies

--- a/package.json
+++ b/package.json
@@ -33,17 +33,6 @@
   },
   "homepage": "https://github.com/googleanalytics/autotrack#readme",
   "dependencies": {
-    "chalk": "^2.4.1",
-    "dom-utils": "^0.9.0",
-    "fs-extra": "^7.0.0",
-    "glob": "^7.1.2",
-    "google-closure-compiler-js": "^20180610.0.0",
-    "gzip-size": "^5.0.0",
-    "idlize": "^0.1.0",
-    "rollup": "^0.64.1",
-    "rollup-plugin-virtual": "^1.0.1",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "source-map": "^0.7.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -51,6 +40,14 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
+    "chalk": "^2.4.1",
+    "dom-utils": "^0.9.0",
+    "fs-extra": "^7.0.0",
+    "glob": "^7.1.2",
+    "google-closure-compiler-js": "^20180610.0.0",
+    "gzip-size": "^5.0.0",
+    "idlize": "^0.1.0",
+    "source-map": "^0.7.3",
     "easy-sauce": "^0.4.2",
     "eslint": "^5.4.0",
     "eslint-config-google": "^0.9.1",
@@ -63,6 +60,9 @@
     "intersection-observer": "^0.5.0",
     "ngrok": "^3.0.1",
     "rollup-plugin-babel": "^3.0.7",
+    "rollup": "^0.64.1",
+    "rollup-plugin-virtual": "^1.0.1",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "run-sequence": "^2.2.1",
     "sauce-connect-launcher": "^1.2.4",
     "selenium-server-standalone-jar": "^3.13.0",
