--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "homepage": "https://github.com/googleanalytics/autotrack#readme",
   "dependencies": {
+    "dom-utils": "^0.9.0",
+    "idlize": "^0.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -41,12 +43,10 @@
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "chalk": "^2.4.1",
-    "dom-utils": "^0.9.0",
     "fs-extra": "^7.0.0",
     "glob": "^7.1.2",
     "google-closure-compiler-js": "^20180610.0.0",
     "gzip-size": "^5.0.0",
-    "idlize": "^0.1.0",
     "source-map": "^0.7.3",
     "easy-sauce": "^0.4.2",
     "eslint": "^5.4.0",
